# feature-steering-RL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
config/: base_model_eval.yaml  config.yaml  deepspeed.json  feature_ablation_eval.yaml  gemma2_2B.yaml  gemma2_2B_full.yaml  gemma2_2B_random_ablation.yaml  gemma2_2B_train_ablation.yaml  gemma2_9B.yaml  gemma2_9B_random_ablation.yaml  gemma2_9B_train_ablation.yaml  gpt2.yaml  gpt2_full.yaml  steering_fraction_eval.yaml
config/alpaca_eval/gemini_2_5_flash/: configs.yaml
config/alpaca_eval/gpt_5_mini/: configs.yaml
config/architecture/: gemma2_2B.yaml  gemma2_2B_full.yaml  gemma2_9B.yaml  gpt2_default.yaml  gpt2_full.yaml
config/training/: gemma2_2B.yaml  gemma2_2B_full.yaml  gemma2_9B.yaml  gpt2_default.yaml  gpt2_full.yaml  simpo_default.yaml
config/wandb/: gemma2_2B.yaml  gemma2_2B_full.yaml  gemma2_2B_train_ablation.yaml  gemma2_9B.yaml  gemma2_9B_train_ablation.yaml  gpt2_default.yaml  gpt2_full.yaml  wandb.yaml
models/test/: sae_config.json
notebooks/: analysis.ipynb  analysis_demo.ipynb  architecture_demo.ipynb  benchmark.ipynb  feature_usage_distribution.ipynb  steering_analysis_results.ipynb  steering_fraction_results_plot.ipynb  steering_vector_analysis_demo.ipynb  test.ipynb  top_10_features.ipynb  top_10_features_alignment.ipynb  training_demo.ipynb  wandb_results_plotting.ipynb  wandb_test.ipynb
notebooks/demos/: analysis_demo.ipynb  architecture_demo.ipynb  human_label_alignment_review.ipynb  neuronpedia_explanations_quicklook.ipynb  training_demo.ipynb
notebooks/outputs/: combined_sparsity_results.csv  custom_prompts_comparison.txt  effortless-cherry-6_steering_fraction_eval.csv  generation_comparison.txt  layer_sweep_results.csv  sparsity_sweep_results.csv  wandb_results_full.csv
notebooks/poster/: simple_plots_poster.ipynb
notebooks/rebuttal/: caa_steering.ipynb  error_correction.ipynb  example_outputs.ipynb  generate_input_json.py  layer_heuristic.ipynb
scripts/: all_evals.sh  caching_sae_experiments.py  evals.py  for_paper.py  gsm8k_experiments.py  lmarena.sh  run_evals.py  simple_mmlu.py  test_ablation_setup.py  test_style_ablation_setup.py
src/fsrl/: __init__.py  hooked_model.py  jump_relu.py  sae_adapter.py  steering_fraction_eval.py  train.py
src/fsrl/SimPO/: simpo_trainer.py
src/fsrl/debug/: __init__.py
src/fsrl/evals/: alpaca.py  lmarena.py
src/fsrl/scripts/: base_model_eval.py  (+5 more)
src/util/: saefeatureanalyzer.py
tests/: l0_debug.py  test_model_loading.py
(+11 files in other folders)
