[project]
name = "fsrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "hf-xet>=1.1.3",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "neuronpedia>=1.0.22",
    "nnsight>=0.4.6",
    "peft>=0.16.0",
    "sae-lens==5.10.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformer-lens>=2.15.4",
    "transformers>=4.52.4",
    "trl>=0.15.2",
    "wandb>=0.20.0",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- TOOL UV CONFIGURATION ---

[tool.uv]
# Search all indexes.
index-strategy = "unsafe-best-match"

# Define the official PyTorch CUDA 12.8 index
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

# Define the NVIDIA index for its specific components
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"


# Now, direct uv to the correct index for each specific package
[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
triton = [{ index = "nvidia" }]
